--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.18.106",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "css-loader": "^6.11.0",
+    "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "style-loader": "^3.3.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.18.6",
     "gh-pages": "^6.1.1"
   },
   "homepage": "https://sanket-pande.github.io/react-profile"
