--- a/package.json
+++ b/package.json
@@ -48,5 +48,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://sanket-pande.github.io/react-profile"
+  "homepage": "https://sanketpande.me/"
 }
